# snake-arena-live

./: .gitignore  Dockerfile  README.md  agents.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml  tailwind.config.ts
.gemini/antigravity/brain/: implementation_plan.md  task.md  walkthrough.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
backend/: .gitignore  Dockerfile  README.md  database.py  db_setup.py  main.py  models.py  pyproject.toml  snake_arena.db  sql_models.py  verify_api.py
backend/tests/: test_main.py
backend/tests_integration/: conftest.py  test_database_connection.py  test_user_database.py
frontend/: Dockerfile  README.md  playwright.config.ts  vite.config.ts
frontend/e2e/: snake-game.spec.ts
frontend/src/: index.css
frontend/src/api/: client.ts  mockData.ts
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/game/: GameOverlay.tsx  MobileControls.tsx  SnakeGame.tsx
frontend/src/hooks/: useGameLogic.ts  useSpectatorGame.ts
frontend/src/pages/: Index.tsx
frontend/src/test/: LoginForm.test.tsx  api.test.ts  gameLogic.test.ts  setup.ts
frontend/src/utils/: audio.ts
src/: index.css
src/api/: client.ts
src/components/auth/: AuthModal.tsx  SignUpForm.tsx  UserMenu.tsx
src/components/game/: GameCanvas.tsx  GameControls.tsx
src/components/layout/: Header.tsx  Navigation.tsx
src/components/spectator/: LiveGameCard.tsx  LiveGames.tsx  SpectatorView.tsx
src/context/: AuthContext.tsx
src/test/: api.test.ts
src/types/: game.ts
(+2 files in other folders)
